--- a/app/ui/sidebar/styles.module.css
+++ b/app/ui/sidebar/styles.module.css
@@ -69,7 +69,7 @@
 		}
 	}
 
-	svg {
+	svg > path {
 		fill: var(--color-green-mid);
 	}
 }
